--- a/styles/login.css
+++ b/styles/login.css
@@ -128,10 +128,39 @@ input {
     color: var(--texto-escuro);
     margin-top: 10px;
 }
-.erro-login{
+
+.erro-login {
     color: var(--erro);
     font-weight: 600;
     text-align: center;
     margin-top: 20px;
     display: none;
+}
+.logo-resp{
+    display: none;
+}
+
+/*RESPONSIVIDADE - MEDIA QUERY*/
+
+@media (max-width: 900px) {
+    .container-login {
+        grid-template-columns: 1fr;
+    }
+    .painel-esquerdo{
+        margin: 0;
+    }
+    .descricao{
+        font-size: 1.1em;
+        max-width: 55%;
+    }
+    .logo{
+        display: none;
+    }
+    .logo-resp{
+        display: inline;
+        margin-bottom: 50px;
+    }
+}
+@media (max-width: 600px){
+    
 }
