--- a/styles/cadastro.css
+++ b/styles/cadastro.css
@@ -1,63 +1,102 @@
-body {
-    background-color: #ffffff;
-    color: var(--texto-escuro);
-    color: var(--fundo);
-
+:root {
+    --fundo: #132437;
+    --amarelo: #F7C13C;
+    --borda: #313A3C;
+    --texto-escuro: #0C0101;
+    --branco: #ffffff;
+    --texto-suave:#B3C0CF;
 }
 
 header {
-    padding: 40px;
-    background-color: var(--fundo);
-    color: var(--branco);
-    margin: 55px;
+    margin: 50px 50px 0;
+    padding: 40px 30px;
     border-radius: 20px;
+    color: var(--branco);
+    background-color: var(--fundo);
     display: flex;
+    align-items: center;
     justify-content: space-between;
+    gap: 25px;
 }
 
-.form-cadastro {
+h1 {
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+form {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.container-login {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    height: 100vh;
-}
-
-
-.campo-1 {
-    
+.cadastro {
+    margin: 50px 0;
     display: flex;
-    margin: 50px;
-    align-items: flex-start;
-    flex-direction: column;
-    width: 35%;
-    gap: 15px;
-}
-
-.campo-2 {
-    display: flex;
-    margin: 50px;
-    align-items: flex-start;
-    flex-direction: column;
-    width: 35%;
-    gap: 15px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 75%;
+    gap: 50px;
 }
 
 input {
     width: 100%;
-    align-items: center;
-    justify-content: center;
+    padding: 12px;
+    margin-bottom: 25px;
+    border: 1px solid var(--borda);
+    border-radius: 8px;
+    font-size: 1rem;
     color: var(--texto-escuro);
     background-color: var(--branco);
+}
+
+.botao-cadastro {
+    background-color: var(--fundo);
+    color: var(--amarelo);
+    padding: 10px;
+    border: none;
     border-radius: 10px;
-    padding: 15px;
-
+    font-weight: 700;
+    font-size: 1rem;
+    width: 40%;
+    max-width: 400px;
+    transition: background-color 0.1s, color 0.1s;
 }
-.botoes{
 
-    
+.botao-cadastro:hover {
+    background-color: #26394E;
+    cursor: pointer;
 }
+
+.voltar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.9rem;
+    text-decoration: underline;
+    font-weight: 700;
+    color: var(--texto-escuro);
+    margin: 25px 0;
+}
+
+.campo-senha, .vazio {
+    margin-top: -20px;
+    font-size: 0.8rem;
+}
+
+.campo-senha {
+    color: var(--texto-suave);
+}
+
+.vazio {
+    visibility: hidden;
+}
+
+@media (max-width: 900px) {
+    .cadastro {
+        flex-direction: column;
+        gap: 0;
+        margin: 25px 0;
+    }
